--- a/lookbook_frontend/package.json
+++ b/lookbook_frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
     "history": "^5.3.0",
     "react": "^18.1.0",
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   }
 }
